listings/ch13-functional-features/no-listing-02-functions-cant-capture/output.txt
$ cargo run
   Compiling equal-to-x v0.1.0 (file:///projects/equal-to-x)
error[E0434]: can't capture dynamic environment in a fn item
 --> src/main.rs:4:42
  |
4 |     fn equal_to_x(z: i32) -> bool { z == x }
  |                                          ^
  |
  = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
error: Could not compile `equal-to-x`.

To learn more, run the command again with --verbose.
